<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.fh_muenster.chat.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/txtName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="101dp"
        android:layout_alignStart="@+id/btnRegister"
        android:layout_alignEnd="@+id/btnRegister" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/txtName"
        android:layout_alignEnd="@+id/txtName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password_confirmation"
        android:id="@+id/txtPasswordConfirmation"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword"
        android:layout_alignEnd="@+id/btnRegister" />

    <Button
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/txtPasswordConfirmation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:onClick="clickRegister"/>
</RelativeLayout>
